k8s/ingress.yml
# k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-service-ingress
  namespace: developer-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: lb-0ad24079de984ec5b329ebe0553c2e9b-1.upcloudlb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
